objects/ssot__SuggestedAssessmentDefinition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentDefinitionReferenceId__c</fullName>
        <label>Assessment Definition Reference</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentRefObjectName__c</fullName>
        <label>Assessment Ref Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Suggested Assessment Definition Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceContextId__c</fullName>
        <label>Source Context</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectRefObjectName__c</fullName>
        <label>Subject Ref Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuggestedAssessmentStatus__c</fullName>
        <label>Suggested Assessment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291038439_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SuggestedAssessmentDefinition_Subjec_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>SuggestedAssessmentDefinition_Subjec_rel</relationshipLabel>
        <relationshipName>rel_1720291038439_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291815494_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SuggestedAssessmentDefinition_Source_rel</label>
        <referenceTo>ssot__ClinicalServiceRequest__dlm</referenceTo>
        <relationshipLabel>SuggestedAssessmentDefinition_Source_rel</relationshipLabel>
        <relationshipName>rel_1720291815494_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291818154_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SuggestedAssessmentDefinition_Source_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>SuggestedAssessmentDefinition_Source_rel</relationshipLabel>
        <relationshipName>rel_1720291818154_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>